# ghost-forest-watcher

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEX-NOTES-081125.md  LICENSE  Makefile  PRD.md  PROJECT_SUMMARY.md  README.md  TASKS.md  TODO.md  app.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_app.py  setup.py  test_app.py  test_web.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: DEVELOPMENT_ROADMAP.md  PROJECT_SUMMARY.md  SCALING_IMPLEMENTATION_GUIDE.md  TEST_SUCCESS_SUMMARY.md
ghost_forest_watcher/: __init__.py  app.py  app_safe.py
ghost_forest_watcher/src/: __init__.py  cloud_pipeline.py  data_manager.py  sam_processor.py  scalable_processor.py  scale_demo.py  streamlit_pages.py
scripts/: run_app.py
src/: README_SAM.md  gee_preprocessing.py  gee_utils.py  lazy_imports.py  sam_processor.py
tests/: __init__.py  test_app.py  test_cloud.py  test_pages_import.py  test_web.py
